--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
        <meta charset="utf-8">
-       <meta name="viewport" content="width=device-width intial-scale=1.0px">
+       <meta name="viewport" content="width=device-width, intial-scale=1.0">
        <title> Profile </title>
        <meta name="Discription" content="This is discription">
        <link rel="stylesheet" href="styles.css" />
